--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "server": "json-server --watch db.json --port 3000"
   },
   "private": true,
   "dependencies": {
@@ -17,6 +18,14 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@ant-design/icons-angular": "^19.0.0",
+    "@ngrx/effects": "^19.1.0",
+    "@ngrx/entity": "^19.1.0",
+    "@ngrx/signals": "^19.1.0",
+    "@ngrx/store": "^19.1.0",
+    "@ngrx/store-devtools": "^19.1.0",
+    "json-server": "^1.0.0-beta.3",
+    "ng-zorro-antd": "^19.2.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
