--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@ant-design/icons-angular": "^19.0.0",
     "@ngrx/effects": "^19.1.0",
     "@ngrx/entity": "^19.1.0",
+    "@ngrx/operators": "^19.1.0",
     "@ngrx/signals": "^19.1.0",
     "@ngrx/store": "^19.1.0",
     "@ngrx/store-devtools": "^19.1.0",
